# RemoteAccessTool

./: .gitignore
backend/: Cargo.toml
backend/console_test/: Cargo.toml
backend/console_test/src/: main.rs
backend/flex_net_core/: Cargo.toml
backend/flex_net_core/src/: lib.rs
backend/flex_net_core/src/async_utils/: async_and_then.rs
backend/flex_net_core/src/networking/: address_src.rs  certificate_src.rs  connections.rs  messages.rs
backend/flex_net_core/src/utils/: env_host_source.rs
backend/flex_net_tcp/: Cargo.toml
backend/flex_net_tcp/src/networking/: connections.rs  secure_connections.rs
backend/flex_server_core/: Cargo.toml
backend/flex_server_core/src/networking/: listeners.rs  server_behaviors.rs  servers.rs  session_behaviors.rs
backend/flex_server_core/src/utils/: generic_server.rs  secure_generic_server.rs
backend/flex_server_tcp/: Cargo.toml
backend/flex_server_tcp/src/networking/: listeners.rs  secure_listeners.rs
backend/flex_server_tcp/src/utils/: pkcs12_certificate_src.rs
backend/remote_recorder/: Cargo.toml  build.rs
backend/remote_recorder/src/: main.rs
backend/remote_recorder/src/features/: audio_stream.rs  commands.rs  events.rs  login.rs  mod.rs  monitor_stream.rs  protocol_traits.rs
backend/remote_recorder/src/media/: audio.rs  mod.rs
backend/remote_recorder/src/utils/: logger.rs  mod.rs  numbers.rs  reading.rs  stream.rs  writing.rs
frontend/: RemoteAccessTool.slnx
frontend/RemoteAccessTool.Application/: AssemblyLocator.cs  RemoteAccessTool.Application.csproj
frontend/RemoteAccessTool.Application/Audio/Interfaces/: IAudioDriver.cs
frontend/RemoteAccessTool.Application/Remote/Interfaces/: IRemote.cs
frontend/RemoteAccessTool.Domain/: RemoteAccessTool.Domain.csproj
frontend/RemoteAccessTool.Domain/Common/: Empty.cs  Err.cs  Result.cs
frontend/RemoteAccessTool.Infrastructure/: RemoteAccessTool.Infrastructure.csproj
frontend/RemoteAccessTool.Infrastructure/Audio/Primitives/: PipewireAudioDriver.cs
frontend/RemoteAccessTool.Infrastructure/Extensions/: BuilderEx.cs  DiEx.cs
frontend/RemoteAccessTool.Infrastructure/Markup/: Inject.cs
frontend/RemoteAccessTool.Infrastructure/Options/: PlainOptions.cs
frontend/RemoteAccessTool.View/: App.axaml  App.axaml.cs  Program.cs  RemoteAccessTool.View.csproj  app.manifest
frontend/RemoteAccessTool.View/ViewModels/: RemoteViewModel.cs  ScreensViewModel.cs
infra/: README.md
infra/linux/: Makefile
infra/linux/src/: pwutils.c  test.c
(+11 files in other folders)
