[workspace]
resolver = "2"
members = [
    "console_test",
    "flex_net_core",
    "flex_net_tcp",
    "flex_server_core",
    "flex_server_tcp", "remote_recorder",
]

[workspace.dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
log = "0.4.26"
anyhow = "1.0.98"
tokio = { version = "1.45.0", features = ["full"] }
tokio-tls = "0.3.1"
native-tls = "0.2"
tokio-native-tls = "0.3"
futures = "0.3.31"
