[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { workspace = true }
dotenv = "0.15.0"
log = { workspace = true }
log4rs = "1.3.0"
tokio = { workspace = true }
anyhow = { workspace = true }
flex_net_core = { path = "../flex_net_core" }
flex_server_core = { path = "../flex_server_core" }
flex_net_tcp = { path = "../flex_net_tcp" }
flex_server_tcp = { path = "../flex_server_tcp" }
