[package]
name = "flex_server_tcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tokio-tls = { workspace = true }
native-tls = { workspace = true }
log = { workspace = true }
tokio-native-tls = { workspace = true }
anyhow = { workspace = true }
flex_net_core = { path = "../flex_net_core" }
flex_server_core = { path = "../flex_server_core" }
flex_net_tcp = { path = "../flex_net_tcp" }
