[package]
name = "remote_recorder"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
xcap = "0.5.1"
futures = { workspace = true }
flex_net_core = { path = "../flex_net_core" }
flex_server_core = { path = "../flex_server_core" }
flex_net_tcp = { path = "../flex_net_tcp" }
flex_server_tcp = { path = "../flex_server_tcp" }
dotenv = "0.15.0"
log4rs = "1.3.0"
log = { workspace = true }
stream_throttle = "0.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.8.0"

[build-dependencies]
cc = "1.2.26"
pkg-config = "0.3.32"
